# Agv_project

./: .env.example  .gitignore  README.md  my_readme.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: agv.py  auth.py  task.py
app/connectors/: __init__.py  base.py
app/connectors/charger/: __init__.py
app/connectors/plc/: __init__.py
app/connectors/seer/: __init__.py  api.py  client.py  constants.py  manager.py  protocol.py
app/core/: config.py  logging.py  security.py
app/db/: redis.py  tortoise_conf.py
app/models/: __init__.py  agv.py  task.py  user.py
app/scheduler/: __init__.py
app/schemas/: agv.py  auth.py  common.py  task.py
app/services/: agv_service.py  auth_service.py  task_service.py
app/utils/: exceptions.py
app/workers/: __init__.py
app/ws/: __init__.py
scripts/: run_dev.bat  seed_users.py
tests/: test_protocol.py  test_seer_client.py
