[project]
name = "agv-scheduler"
version = "0.1.0"
description = "Factory AGV scheduling system (FastAPI + Tortoise-ORM + MySQL + Redis)"
requires-python = ">=3.10"

[tool.aerich]
tortoise_orm = "app.db.tortoise_conf.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
